# rust-magic-patterns

./: .gitignore  Readme.md  Readme_ZH_CN.md
async-pipeline-pattern/: Cargo.toml  Readme.md  backpressure.json
async-pipeline-pattern/src/: bench.rs  main.rs
axum-style-magic-function-param/: Cargo.toml  Readme.md  Readme_ZH_CN.md
axum-style-magic-function-param/src/: magic.rs
dumbing-down-iterator/: Cargo.toml  Readme.md  Readme_ZH_CN.md
dumbing-down-iterator/src/: lib.rs  my_filter.rs  my_from_iterator.rs  my_iterator.rs  my_map.rs  slice_iterator.rs
rust-stream-visualized/: Cargo.toml  Readme.md  Readme_ZH_CN.md
rust-stream-visualized/src/: main.rs
src/: magic.rs  main.rs
visual-journey-through-async-rust/: .gitignore  Cargo.toml  Readme.md  build.rs  pyproject.toml
visual-journey-through-async-rust/src/: main.rs
visual-journey-through-async-rust/src/py/: plot.py
