[package]
name = "visual-journey-through-async-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
thread-id = "5.0.0"
futures = "0.3.31"
rand = "0.9.0"
pyo3 = { version = "0.23.5" }
anyhow = "1"