[project]
name = "visual-journey-through-async-rust"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "alexpusch" }]
dependencies = [
    "pandas>=2.2.3",
    "nbformat>=4.2.0",
    "matplotlib>=3.10.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rust_tokio_futures_timings_vis"]
